--- a/package.json
+++ b/package.json
@@ -1,5 +1,42 @@
 {
-	"version": "0.0.0",
-	"name": "iCheck",
-	"description": "iCheck fixed jQuery plugin"
+  "name": "iCheck",
+  "version": "1.0.2",
+  "description": "Highly customizable checkboxes and radio buttons (jQuery & Zepto)",
+  "keywords": [
+    "icheck",
+    "checkbox",
+    "radio",
+    "input",
+    "field",
+    "form",
+    "custom",
+    "replacement",
+    "accessibility",
+    "skins",
+    "ui",
+    "checked",
+    "disabled",
+    "indeterminate"
+  ],
+  "main": [
+    "./icheck.min.js"
+  ],
+  "dependencies": {
+    "jquery": ">=1.7"
+  },
+  "ignore": [
+    ".gitignore",
+    "CHANGELOG.md",
+    "README.md",
+    "demo/"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Damir Sultanov",
+      "email": "info@fronteed.com",
+      "homepage": "http://fronteed.com/"
+    }
+  ],
+  "homepage": "http://fronteed.com/iCheck/"
 }
